indico/modules/search/client/js/components/SearchApp.module.scss
// This file is part of Indico.
// Copyright (C) 2002 - 2021 CERN
//
// Indico is free software; you can redistribute it and/or
// modify it under the terms of the MIT License; see the
// LICENSE file for more details.

.menu {
  overflow-x: scroll;
  padding-bottom: 2px;
}

.grid {
  justify-content: center;
}

